welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:2: error: Missing closing brace `}' assumed here
do { avance 
^Program:5: error: 'while' expected but '}' found.
}
^